--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "PostgreeSql": "Host=localhost;Port=5432; Database=postgres; User Id=postgres; Password=;"
+  },
   "AllowedHosts": "*"
 }
