--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "noodlehouse",
+  "name": "noodlefoodle",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,9 +10,6 @@
   },
   "dependencies": {
     "feather-icons-react": "^0.7.1",
-    "lucide-react": "^0.344.0",
-    "lucide-react-native": "^0.475.0",
-    "lucide-static": "^0.473.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5"
