--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "feather-icons-react": "^0.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.15.1",
     "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
